Spark properties are now used across EMR and persistent EMR clusters